--- a/Primeiro-semestre/#1 Responsive Web Development/aula03/index.html
+++ b/Primeiro-semestre/#1 Responsive Web Development/aula03/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Título 1</h1>
+    <h1 id="titulo">Título 1</h1>
     <h2>Título 2</h2>
     <h3>Título 3</h3>
     <h4>Título 4</h4>
