--- a/Primeiro-semestre/Challenge/equipe.html
+++ b/Primeiro-semestre/Challenge/equipe.html
@@ -20,7 +20,7 @@
     <div class="corpo">
         <header>
             <div class="container" id="navbar">
-                <a href="./index.html" class="logo">Nome <b>Grupo</b></a>
+                <a href="./index.html" class="logo">Talk<b>Bility</b></a>
                 <ul class="links">
                     <a id="projeto" href="./index.html">
                         <li>O Projeto</li>
