--- a/Primeiro-semestre/Challenge/index.html
+++ b/Primeiro-semestre/Challenge/index.html
@@ -18,7 +18,7 @@
   <div class="corpo">
     <header>
       <div class="container" id="navbar">
-        <a href="./index.html" class="logo">Nome <b>Grupo</b></a>
+        <a href="./index.html" class="logo">Talk<b>Bility</b></a>
         <ul class="links">
           <a id="projeto" href="./index.html">
             <li>O Projeto</li>
@@ -35,7 +35,7 @@
     <div class="content">
       <div class="container">
         <div class="info">
-          <h1 class="titulo">Nome do Projeto</h1>
+          <h1 class="titulo">Desenvolvimento de Chatbot com Atendimento Personalizado e Acessibilidade</h1>
           <p id="descricao">
             A solução proposta será centralizada, principalmente, na criação
             de um chatbot com atendimento personalizado e direcionado, visando
