--- a/Segundo-Semestre/Responsive-Web-Development/Aula03/index.html
+++ b/Segundo-Semestre/Responsive-Web-Development/Aula03/index.html
@@ -17,9 +17,9 @@
 <body>
 
     <div id="startScreen" style="display: flex;">
-        <h1>Aperte enter para iniciar</h1>
+        <h1>Aperte qualquer botão para iniciar</h1>
     </div>
-    
+
 
     <div class="game-board">
         <div id="score" class="pontuacao">Distância: 0</div>
@@ -32,6 +32,7 @@
     <audio id="gameOverSound" src="./sound/diesound.mp3" preload="auto"></audio>
     <audio id="nicePointsSound" src="./sound/nicepoints.mp3" preload="auto"></audio>
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="./js/iframes.js"></script>
 </body>
 
 </html>
